Closed Bug 1688372 Opened 5 years ago Closed 5 years ago

error: reference to ‘Glyph’ is ambiguous

Categories

(Developer Infrastructure :: Source Code Analysis, defect)

defect

Tracking

(firefox86 fixed)

RESOLVED FIXED
86 Branch
Tracking Status
firefox86 --- fixed

People

(Reporter: Sylvestre, Assigned: Sylvestre)

References

Details

Attachments

(1 file)

with gcc 10

                  from Unified_cpp_widget_gtk0.cpp:128: /usr/include/X11/extensions/Xrender.h:311:14: error: reference to ‘Glyph’ is ambiguous   311 |      _Xconst Glyph    *gids,       |              ^~~~~
Pushed by sledru@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/2541c7370125 fix some reference to 'Glyph' is ambiguous r=andi
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
Product: Firefox Build System → Developer Infrastructure
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: