Bug 1688372 - fix some reference to 'Glyph' is ambiguous r=andi

Just like we did in bug 1671813

Differential Revision: https://phabricator.services.mozilla.com/D102834